  * Introduced srmConnectorSetBufferDamageBoxes() to set connector damage using Pixman-style boxes.
  * Introduced new functions for vsync control: srmConnectorHasVsyncControlSupport(), srmConnectorIsVsyncEnabled(), and srmConnectorEnableVsync().
    Note: Support for the atomic DRM API requires Linux >= 6.8.
  * Added srmConnectorGetPresentationClock() and srmConnectorGetPresentationTime() functions for querying presentation time information of framebuffers.

  # Security Improvements

  * Fixed a security vulnerability where the hardware cursor plane pointer reference used by a connector was set to NULL
    before the connector was completely uninitialized. This could have caused crashes due to racing conditions between threads.
  * Enabled compiler warning messages for SRMLog functions to alert when the value types to print do not match the specified string format.
  * Addressed a memory leak issue by ensuring the proper release of the connector mode blob ID after modifying a connector's mode.

  # Documentation

  * Enhanced the Doxygen layout to showcase member declarations at the top of each page, accompanied by brief descriptions for improved readability.
  * Added a "Pre-built Binaries" section on the Downloads page.

  # Building

  * Transformed the SRMTypes.h header into a configuration file, including macros to access the library version statically during compilation.
  
-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Wed, 24 Jan 2024 12:43:33 -0300


SRM (0.4.0-1)

  # New Features

  * Introduced srmPlaneGetFormats() to retrieve the supported formats/modifiers of an SRMPlane.
  * Implemented srmDeviceGetGLExtensions() for checking the support of common OpenGL extensions.
  * Added srmCoreGetVersion() to retrieve the current SRM version.

  # Building

  * Incorporated soversion in meson.build, special thanks to @sudipm-mukherjee.
  
  # Internal Changes

  * Set rendering OpenGL contexts to high priority.